# quagga

./: .gitmodules  Makefile.am  README.md  configure.ac
babeld/: babel_interface.c  babel_interface.h  babel_main.c  babel_zebra.c  babeld.c
bfdd/: Makefile.am  bfd.bcapnp.c  bfd.bcapnp.h  bfd.capnp  bfd_debug.c  bfd_debug.h  bfd_fsm.c  bfd_fsm.h  bfd_interface.c  bfd_interface.h  bfd_main.c  bfd_net.c  bfd_net.h  bfd_packet.c  bfd_packet.h  bfd_zebra.c  bfd_zebra.h  bfdd.c  bfdd.conf.sample  bfdd.h  bfdd.ndef.hi  bfdd.ndef.i
bgpd/: .gitignore  IMPLEMENTATION.txt  Makefile.am  bgp.bcapnp.c  bgp.bcapnp.h  bgp.capnp  bgp.libbcapnp.c  bgp_advertise.c  bgp_advertise.h  bgp_aspath.c  bgp_attr.c  bgp_attr.h  bgp_attr_evpn.c  bgp_attr_evpn.h  bgp_bfd.c  bgp_clist.c  bgp_debug.c  bgp_debug.h  bgp_dump.c  bgp_ecommunity.c  bgp_ecommunity.h  bgp_encap.c  bgp_encap_tlv.c  bgp_encap_types.h  bgp_evpn.c  bgp_evpn.h  bgp_fsm.c  bgp_fsm.h  bgp_lu.c  bgp_lu.h  bgp_main.c  bgp_memory.c  bgp_memory.h  bgp_mpath.c  bgp_mpath.h  bgp_mplsvpn.c  bgp_mplsvpn.h  bgp_network.c  bgp_network.h  bgp_nexthop.c  (+20 more)
doc/: bgpd.texi
isisd/: Makefile.am  isis_circuit.c  isis_main.c  isis_zebra.c
lib/: .gitignore  IMPLEMENTATION.txt  Makefile.am  bfd.c  bfd.h  command.c  command.h  ecommunity.c  ecommunity.h  if.c  if.h  log.c  log.h  logical_table.c  logical_table.h  memory.c  memory.h  memory_cli.c  memory_cli.h  memtypes.c  nexthop.c  pid_output.c  plist.c  prefix.c  prefix.h  privs.c  qzc.c  qzc.capnp  qzc.capnp.c  qzc.capnp.h  qzc.h  qzmq.c  qzmq.h  route_types.txt  routemap.c  sockopt.c  sockopt.h  stream.c  stream.h  thread.c  (+10 more)
ospf6d/: Makefile.am  ospf6_main.c  ospf6_route.c  ospf6_zebra.c  ospf6_zebra.h
ospfclient/: Makefile.am
ospfd/: Makefile.am  ospf_main.c  ospf_vty.c  ospf_zebra.c
pimd/: Makefile.am  pim_main.c  pim_zebra.c  pim_zlookup.c  pimd.c
pkgsrc/: Makefile.am  bfdd.sh.in  dev_compile_script.sh  packaging.sh  qbgp.preinst.ubuntu  qthriftd.centos  qthriftd.redhat7  qthriftd.rotate.ubuntu  qthriftd.suse  qthriftd.ubuntu  qthriftd_log_rotate.sh.ubuntu
pkgsrc/systemd/: qbgp  qbgp.service
qthriftd/: Makefile.am  bgp_configurator.c  bgp_configurator.h  bgp_updater.c  bgp_updater.h  qthrift_bgp_configurator.c  qthrift_bgp_configurator.h  qthrift_bgp_updater.c  qthrift_bgp_updater.h  qthrift_debug.c  qthrift_debug.h  qthrift_main.c  qthrift_master.h  qthrift_memory.c  qthrift_memory.h  qthrift_network.c  qthrift_network.h  qthrift_thrift_wrapper.h  qthrift_vpnservice.c  qthrift_vpnservice.h  qthrift_vty.c  qthrift_vty.h  qthriftd.c  qthriftd.h  vpnservice.thrift  vpnservice_types.c  vpnservice_types.h
ripd/: Makefile.am  rip_interface.c  rip_interface.h  rip_main.c  rip_zebra.c
ripngd/: Makefile.am  ripng_interface.c  ripng_main.c  ripng_zebra.c  ripngd.c  ripngd.h
tests/: .gitignore  Makefile.am  bgp_capability_test.c  bgp_mp_attr_test.c  bgp_mpath_test.c  common-cli.c  ecommunity_test.c  main.c  test-buffer.c  test-privs.c  test-zmq-event.c
tests/bgpd.tests/: testbgpmpattr.exp
tests/qthriftd.tests/: get_routes.py  test_4byteas.py  test_dimensioning.py
vtysh/: Makefile.am  extract.pl.in  vtysh.c  vtysh.h  vtysh_config.c  vtysh_main.c
watchquagga/: Makefile.am
zebra/: Makefile.am  client_main.c  connected.c  if_ioctl.c  if_ioctl_solaris.c  if_netlink.c  if_sysctl.c  interface.c  interface.h  kernel_null.c  kernel_socket.c  main.c  redistribute.c  redistribute.h  redistribute_null.c  rib.h  router-id.c  router-id.h  rt.h  rt_ioctl.c  rt_netlink.c  rt_netlink.h  rt_socket.c  rtadv.c  rtadv.h  rtread_getmsg.c  rtread_netlink.c  rtread_proc.c  rtread_sysctl.c  test_main.c  zebra_fpm.c  zebra_fpm_netlink.c  zebra_rib.c  zebra_rnh.c  zebra_routemap.c  zebra_snmp.c  zebra_vty.c  zserv.c  zserv.h  zserv_bfd.c  (+1 more)
